--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "doctor-lookup",
   "version": "1.0.0",
-  "description": "",
+  "description": "### Installation Instructions: If you haven't done so already, in the command line: * npm init * bower init * npm install gulp --save-dev * bower install jquery --save * bower install bootstrap --save * npm install bower-files --save-dev * npm install browser-sync --save-dev * npm install browserify --save-dev * npm install vinyl-source-stream --save-dev * npm install gulp-concat --save-dev * npm install gulp-uglify --save-dev * npm install gulp-util --save-dev * npm install del --save-dev * npm install jshint --save-dev * npm install gulp-jshint --save-dev * npm install gulp-sass gulp-sourcemaps --save-dev",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +22,13 @@
     "gulp-util": "^3.0.8",
     "jshint": "^2.9.5",
     "vinyl-source-stream": "^1.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ethoreson/doctor-lookup.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ethoreson/doctor-lookup/issues"
+  },
+  "homepage": "https://github.com/ethoreson/doctor-lookup#readme"
 }
